--- a/18Firebase/18Firebase/Base.lproj/Main.storyboard
+++ b/18Firebase/18Firebase/Base.lproj/Main.storyboard
@@ -46,6 +46,9 @@
                                 <buttonConfiguration key="configuration" style="gray" title="로그아웃">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="21"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="onBtnLogout:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uIG-dq-byr"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HVM-cE-xv1">
                                 <rect key="frame" x="159" y="381" width="97" height="40"/>
